--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,10 @@
 {
-    "python.linting.mypyEnabled": true,
-    "python.formatting.provider": "black",
     "[python]": {
-        "editor.wordBasedSuggestions": false,
-        "editor.defaultFormatter": "ms-python.python",
+        "editor.wordBasedSuggestions": "off",
+        "editor.defaultFormatter": "charliermarsh.ruff",
         "editor.codeActionsOnSave": {
-            "source.fixAll": true,
-            "source.organizeImports": true,
+            "source.fixAll": "explicit",
+            "source.organizeImports": "explicit"
         }
     }
 }
