Drop Py3.8 support, enable strict mypy and address

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,3 +45,4 @@ repos:
           - .
         args:
           [--no-strict-optional, --ignore-missing-imports, --show-error-codes]
+        exclude: tests/
