--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,13 @@ build-backend = "hatchling.build"
 name = "pre_commit_hooks"
 description = "A selection of pre-commit hooks for pre-commit.com."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 license = "GPL-3.0-or-later"
 keywords = ["pre-commit"]
 authors = [{ name = "adehad", email = "26027314+adehad@users.noreply.github.com" }]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: Implementation :: CPython",
@@ -67,19 +65,20 @@ lint = "python -m pre_commit run --color=always {args:--all-files}"
 # Tests
 ########################################################################################
 [[tool.hatch.envs.test.matrix]]
-python = ["38", "39", "310", "311"]
+python = ["310", "311"]
 
 ########################################################################################
 # External Tool Config
 ########################################################################################
 [tool.mypy]
-python_version = '3.8'
+python_version = '3.10'
 strict = true
 ignore_missing_imports = true
 namespace_packages = true
 show_error_codes = true
 strict_optional = true
 warn_unused_configs = true
+exclude = ["tests/"]
 
 [tool.coverage.run]
 branch = true
@@ -89,7 +88,7 @@ omit = ["src/pre_commit_hooks/__about__.py"]
 [tool.coverage.report]
 exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
 
-[tool.ruff]
+[tool.ruff.lint]
 select = [
   "E",   # pycodestyle
   "W",   # pycodestyle
@@ -101,22 +100,23 @@ select = [
 ]
 ignore = []
 
-# Same as Black.
-line-length = 88
-
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-# Assume Python 3.8. (minimum supported)
-target-version = "py38"
+[tool.ruff]
+# Same as Black.
+line-length = 88
+
+# Assume Python 3.10. (minimum supported)
+target-version = "py310"
 
 # The source code paths to consider, e.g., when resolving first- vs. third-party imports
 src = ["pre_commit_hooks", "tests"]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["pre_commit_hooks", "tests"]
 required-imports = ["from __future__ import annotations"]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 # Use Google-style docstrings.
 convention = "google"
